WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313138
[:has()] Sibling invalidation failures because NodeStyleFlag bitfield overflows
https://bugs.webkit.org/show_bug.cgi?id=313138
Summary
[:has()] Sibling invalidation failures because NodeStyleFlag bitfield overflows
Antti Koivisto
Reported
2026-04-23 09:28:58 PDT
We lose AffectedByHasWithAdjacentSiblingRelationship bit.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-23 09:29:10 PDT
<
rdar://problem/175433733
>
Antti Koivisto
Comment 2
2026-04-23 09:52:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63435
EWS
Comment 3
2026-04-23 10:59:44 PDT
Committed
311870@main
(bfee0acbeffd): <
https://commits.webkit.org/311870@main
> Reviewed commits have been landed. Closing PR #63435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug